--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "router": "^1.3.8",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
