--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "router": "^1.3.8",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
     "url": "^0.11.3",
     "web-vitals": "^2.1.4"
