--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "router": "^1.3.8",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
     "url": "^0.11.3",
     "web-vitals": "^2.1.4"
